# low_latency_logging_libraries

./: .gitignore  CMakeLists.txt  bench_common.h  benchmark_stats  checklisted_tests.txt  quill_callsite_latency_E5.cpp  quill_callsite_latency_E5_four_threads.cpp  quill_callsite_latency_E6.cpp  quill_callsite_latency_E6_four_threads.cpp  quill_write_time_E5.cpp  quill_write_time_E6.cpp  results  spdlog_callsite_latency_E5.cpp  spdlog_callsite_latency_E5_four_threads.cpp
src/: CMakeLists.txt  TimeRotatingFileHandler  gtest_runnable.cpp  gtest_runnable_spdlog.cpp  main.cpp  src.code-workspace
src/googletest/: CMakeLists.txt
src/quill/: cmake_install.cmake
src/quill/include/quill/: Config.h
src/quill/include/quill/detail/spsc_queue/: UnboundedQueue.h
src/quill/include/quill/filters/: FilterBase.h
src/quill/src/: Quill.cpp
src/spdlog-1x/: CMakeLists.txt
